<resources>
    <string name="app_name">FoodPicker</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="setting">Setting</string>
    <string name="enter_item">Enter Item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_toast">You add: </string>

    <string name="speed_up">Speed Up</string>
    <string name="speed_down">Speed Down</string>
    <string name="duration_up">Duration Up</string>
    <string name="duration_down">Duration Down</string>

    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="successfully">successfully</string>
    <string name="delete_fail">Failed to delete</string>
    <string name="rows">rows</string>
    <string name="enter_title_here">Enter title here</string>

    <string name="active">Active</string>
    <string name="inactive">Inactive</string>

    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="item_list">  <b><u>ITEM LIST</u></b>  </string>
    <string name="home">Home</string>
    <string name="activate_all">Activate All</string>
    <string name="deactivate_all">Deactivate All</string>
    <string name="delete_all">Delete All</string>
</resources>