<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/col_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:id="@+id/col_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/title"
        android:textColor="@color/white"
        android:gravity="center" />

    <Button
        android:id="@+id/col_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/status"
        android:paddingHorizontal="6dp" />

    <Button
        android:id="@+id/col_del"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/red"
        android:paddingHorizontal="6dp"
        android:text="@string/delete"
        android:textColor="@color/white" />
</LinearLayout>