<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/darkred"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/setting"
            android:src="@drawable/setting" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/centerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/slot" />

            <TextView
                android:id="@+id/slotText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/verticalSeekBar"
            android:layout_width="139dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@color/gray"
            android:rotation="90"
            android:thumb="@drawable/thumb2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/darkred"
        android:orientation="horizontal"
        android:gravity="center_vertical"> <!-- Align children vertically centered -->

        <ImageButton
            android:id="@+id/item_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/list"
            android:src="@drawable/list" />

        <ImageButton
            android:id="@+id/item_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add"
            android:src="@drawable/add" />

    </LinearLayout>

</LinearLayout>